# chismelabs

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
data/Archivos_Scan_RBML/Archives/Folder 626/: page_002_img_001.txt  page_003_img_001.txt  page_004_img_001.txt  page_005_img_001.txt  page_006_img_001.txt  page_008_img_001.txt  page_010_img_001.txt  page_011_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 627/: page_018_img_001.txt  page_019_img_001.txt  page_021_img_001.txt  page_022_img_001.txt  page_024_img_001.txt  page_027_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 634/: page_001_img_001.txt  page_002_img_001.txt  page_003_img_001.txt  page_004_img_001.txt  page_004_img_001_annotation.txt
data/Archivos_Scan_RBML/Archives/Folder 657/: page_002_img_001.txt  page_004_img_001.txt  page_006_img_001.txt  page_007_img_001.txt  page_008_img_001.txt  page_009_img_001.txt  page_011_img_001.txt  page_013_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 658_Mulatto girl/: page_001_img_001.txt  page_004_img_001.txt  page_006_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 659_mulatto + mestiza/: page_003_img_001.txt  page_005_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 661_Pobre/: page_001_img_001.txt  page_004_img_001.txt
data/Archivos_Scan_RBML/Archives/Folder 723_casenos rapido/: page_001_img_001.txt  page_002_img_001.txt  page_003_img_001.txt  (+1 more)
data/Archivos_Scan_RBML/Chisme/: drive_map.json
src/cmd/: pdf2img.py  transcribe.py  uploader.py
src/viewer/: main.py
(+58 files in other folders)
