[tool.poetry]
name = "chisme-labs"
version = "0.1.0"
description = ""
authors = ["Andrey Elenskiy <a@elenskiy.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pdfminer = "^20191125"
pdfplumber = "^0.11.5"
pymupdf = "^1.25.1"
openai = "^1.58.1"
pillow = "^11.0.0"
streamlit = "^1.41.1"
google-auth = "^2.38.0"
google-api-python-client = "^2.159.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
