[project]
name = "chismelabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.161.0",
    "google-auth>=2.38.0",
    "openai>=1.63.0",
    "pdfminer>=20191125",
    "pdfplumber>=0.11.5",
    "pillow>=11.1.0",
    "pymupdf>=1.25.3",
    "streamlit>=1.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
